# cgft

./: .env.test.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  conftest.py  hn_archetypes_dataset.jsonl  pyproject.toml  test.py
cgft/: __init__.py
cgft/chunkers/: inspector.py
cgft/corpus/corpora/: client.py
cgft/corpus/turbopuffer/: source.py
cgft/envs/: email_search_env.py
cgft/multi_model/: pricing.py
cgft/qa_generation/: cgft_pipeline.py  pipeline.py  retrieval_query.py  style_controls.py
cgft/qa_generation/filters/: __init__.py  env_rollout.py
cgft/qa_generation/formatters/: __init__.py
cgft/qa_generation/regenerators/: __init__.py  feedback.py
docs/: heuristic-filters-spec.md
docs/bring-your-env/: train.mdx  your-own-env.mdx
docs/environments/: your-own-env.mdx
docs/experiment/: managing-experiments.mdx  sharing.mdx
docs/overview/: introduction.mdx  what-is-rl.mdx
docs/rag/: env.mdx  filters.mdx  rl-for-rag.mdx  scratch.mdx  synthetic_datagen.mdx  train.mdx  turbopuffer.mdx
notebooks/: cipher_swap_env.ipynb  email_rag_pipeline.ipynb  human_lm_demo.ipynb  reverse_env.ipynb  sage_pipeline.ipynb  simple_rag_pipeline.ipynb  simple_rag_pipeline_cgft.ipynb  synthetic_rag_dataset_gen.ipynb  turbopuffer_rag_pipeline.ipynb
notebooks/eval/datasets/: qa_pairs_tier1.csv
notebooks/eval/experiments/: lucid_hoare.csv
scripts/: scrape_hn_archetypes.py
src/cgft/: __init__.py  cli.py
src/cgft/chunkers/: email.py  inspector.py  markdown.py  models.py  storage.py
src/cgft/corpus/: search_client.py  source.py
src/cgft/envs/: __init__.py  chroma_search_env.py  email_search_env.py  linker_env.py  pinecone_search_env.py  query_rewriter.py  reward_helpers.py  search_client_env.py  search_env.py  tpuf_search_env.py
src/cgft/multi_model/: caller.py  clients.py  example_usage.py  models.py
src/cgft/qa_generation/: __init__.py  anchor_selector.py  anchor_utils.py  auto_tune.py  batch_processor.py  cgft_models.py  cgft_pipeline.py  checkpoint.py  corpus_capabilities.py  corpus_profile.py  generated_qa.py  helpers.py  linkers.py  metadata_linker.py  metrics.py  models.py  orchestrator.py  protocols.py  response_parsers.py  retrieval_query.py  scoring.py  search_agent_linker.py  storage.py  style_controls.py  wiki_builder.py  wiki_chunk_linker.py
src/cgft/rubrics/: rubric.py
src/cgft/traces/: __init__.py  adapter.py  http.py  pipeline.py  pivot.py  processing.py  registry.py
src/cgft/trainer/: client.py  pipeline.py  validation.py
src/cgft/utils/: __init__.py  checkpoint.py
src/cgft_utils/: cli.py
src/cgft_utils/chunkers/: email.py  inspector.py  markdown.py  storage.py
src/cgft_utils/corpus/: source.py
src/cgft_utils/envs/: __init__.py  email_search_env.py
src/cgft_utils/multi_model/: example_usage.py  inspector.py
src/cgft_utils/rubrics/: rubric.py
src/synthetic_data_prep/: __init__.py  inspect.py  models.py  storage.py  utils.py
tests/: conftest.py  test_anchor_utils_modes.py  test_auto_tune.py  test_builders.py  test_checkpoint_base.py  test_chroma_configurations.py  test_chroma_filter_mapper.py  test_chroma_search.py  test_chunk_models.py  test_chunkers.py  test_consolidated_types.py  test_corpora_search.py  test_corpus_profile.py  test_dedup.py  test_deterministic_guards.py  test_dsl_parser.py  test_entity_quality.py  test_eval_harness.py  test_filter_mapper_corpora.py  test_filter_mapper_tpuf.py  test_hop_count_validity.py  test_keybert_extraction.py  test_llm_transformer.py  test_metadata_linker.py  test_micro_batch.py  test_pinecone_configurations.py  test_pinecone_search_related.py  test_protocol_conformance.py  test_relabel_qa_types.py  test_search_client_env.py  test_search_types.py  test_tpuf_configurations.py  test_tpuf_hybrid_search.py  test_tpuf_namespace.py  test_tpuf_search_related.py  test_wiki_builder.py  test_wiki_chunk_linker.py
tests/chunkers/: test_markdown.py
tests/corpus/: test_dsl_parser.py  test_protocol_conformance.py  test_search_client_conformance.py
tests/e2e/: test_rag_providers_env.py  test_rag_providers_qa_gen.py  test_traces_full_pipeline.py  test_traces_pipeline.py  test_wizard_codegen_rollout.py
tests/envs/: test_reward_helpers.py  test_search_client_env.py  test_search_env.py
tests/fakes/: chroma.py  pinecone.py
tests/qa_generation/: test_filter_and_sample_seeds.py  test_grounding_removed_chunks.py
tests/traces/: test_adapter.py  test_braintrust_adapter.py  test_braintrust_e2e.py  test_braintrust_extraction.py  test_http.py  test_pipeline.py  test_pivot.py  test_processing.py  test_registry.py
tests/trainer/: test_validation.py
(+192 files in other folders)
