[project]
name = "synthetic-data-prep"
version = "0.1.0"
description = "Tools for preparing synthetic training data, including document chunking pipelines"
readme = "README.md"
authors = [
    { name = "cgft", email = "finetune@cgft.io" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "langchain-text-splitters>=0.3.0",
    "pydantic>=2.0.0",
    "ruamel-yaml>=0.19.1",
    "tqdm>=4.66.0",
    "openai>=2.15.0",
    "nest-asyncio>=1.5.0",
    "aiohttp>=3.13.3",
    "benchmax>=0.1.2.dev18",
    "ragas>=0.4.3",
    "sentence-transformers>=5.2.3",
    "scikit-learn>=1.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "jupyter>=1.0.0",
    "anthropic>=0.76.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true

[dependency-groups]
dev = [
    "jedi-language-server>=0.46.0",
    "jupyter>=1.1.1",
    "turbopuffer>=1.16.2",
]
