[project]
name = "cgft"
version = "0.1.0"
description = "End-to-end pipeline for fine-tuning LLMs on RAG workloads using reinforcement learning"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "cgft", email = "finetune@cgft.io" }
]
urls = { Homepage = "https://github.com/cgftinc/cgft", Repository = "https://github.com/cgftinc/cgft" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27.0",
    "langchain-text-splitters>=0.3.0",
    "pydantic>=2.0.0",
    "ruamel-yaml>=0.19.1",
    "tqdm>=4.66.0",
    "openai>=2.15.0",
    "nest-asyncio>=1.5.0",
    "aiohttp>=3.13.3",
    "benchmax>=0.1.2.dev21",
    "ragas>=0.4.3",
    "keybert>=0.8",
    "sentence-transformers>=5.2.3",
    "scikit-learn>=1.8.0"
]

[project.optional-dependencies]
chroma = [
    "chromadb>=1.0.0",
    # Required by chromadb's client-side BM25 tokenizer when using the
    # Search API in hybrid/lexical modes. Not declared by chromadb itself
    # (they leave it to the caller). Tiny pure-Python package.
    "snowballstemmer>=2.2.0",
]
pinecone = [
    "pinecone>=5.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "jupyter>=1.0.0",
    "anthropic>=0.76.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
cgft-pipeline = "cgft.cli:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/cgft/qa_generation/generators/direct_llm.py" = ["E501"]
"src/cgft/qa_generation/cgft_models.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true

[tool.pytest.ini_options]
markers = [
    "integration: live-backend adapter tests (deselected by default)",
    "e2e: full wizard / QA-gen path against live CGFT services — slow, costs LLM tokens, not CI-appropriate",
]
addopts = "-m 'not integration and not e2e'"

[dependency-groups]
dev = [
    "jedi-language-server>=0.46.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "turbopuffer>=1.16.2",
]
